# SolarMax

./: .gitignore  LICENSE  README.md  hello.py  platformio.ini  test_hello.py
.github/workflows/: ci-on-demand.yml  ci.yml  hotfix-fanout.yml  todo-to-issue.yml
docs/: README.md  architecture.md  breadboard_placement.md  data_flow.md  links_to_parts.md  links_to_parts.tex  simulation.md  sun_tracking_math.md  usage.md  wiring.md  wiring.tex  wiring_breadboard.tex  wiring_diagram.tex
include/: config.h
lib/arduino_compat/: Arduino.cpp  Arduino.h  RTClib.h  library.json
lib/solar_math/: library.json  solar_position.cpp  solar_position.h
lib/tracker_core/: tracker_core.cpp  tracker_core.h
sim/: CMakeLists.txt  README.md  main_tui.cpp
src/: bringup.cpp  config.h  diagnostics.cpp  diagnostics.h  hal_sim.cpp  hal_sim.h  main.cpp  motor_control.cpp  motor_control.h  sensors.cpp  sensors.h  sim_runner.cpp  solar_position.cpp  solar_position.h  time_manager.cpp  time_manager.h
test/test_pins/: test_pins.cpp
test/test_solar/: test_solar.cpp
